deploy/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: encore
spec:
  selector:
    app.kubernetes.io/name: encore
  ports:
    - name: http
      port: 8080
      targetPort: http
